# riif-ultrasonic

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md
include/: fft_impl.hpp  riif_ultrasonic.h
src/core/: riif_ultrasonic.cpp
src/reed-solomon/: gf.hpp  poly.hpp  rs.hpp
tests/: CMakeLists.txt  test_riif_ultrasonic.cpp  test_ultrasonic_core.cpp
